# binschema

./: .gitignore  README.md  build.xml  formatJavaCode.sh
cpp/: CMakeLists.txt  apitest.cpp  deepfiletree.cpp  deepfiletree.h  generatedclasses.cpp  introspection.h  leinput.h  leinputstream.h  leoutputstream.h  listcppfiles.xq  mso.qrc  msoxmlnodemodel.cpp  msoxmlnodemodel.h  pptstructureprinter.cpp  ppttosvg.cpp  ppttosvg.xsl  ppttoxml.cpp  qtparseppt.cpp  qtpptxml.cpp  simpleParser.cpp  simpleParser.h  simpletest.cpp  toxmlandback.cpp  treeintrospection.h  utils.cpp  utils.h  wholeTree.xq
cpp/xmltoodp/: Makefile  xmltocontent.xsl  xmltomanifest.xsl  xmltostyles.xsl
src/: mso.xml  mso.xsd  pdf.xml
src/mso/: GeneratedMsoParser.java  IncorrectValueException.java  JavaMsoParserGenerator.java  LEDataInputStream.java  LEInputStream.java  MSOParser.java  MSOSchemaValidator.java  ParserTester.java  SerializeReader.java
src/mso/generator/: Choice.java  GeneratedMsoParser.java  IncorrectValueException.java  JavaParserGenerator.java  LEDataInputStream.java  LEInputStream.java  Limitation.java  MSO.java  MSOParser.java  Member.java  Option.java  PPTStructurePrinter.java  ParserGeneratorRunner.java  ParserGeneratorUtils.java  ParserTester.java  QtApiGenerator.java  QtParserGenerator.java  SerializeReader.java  Stream.java  Struct.java  TypeRegistry.java  package-info.java
src/mso/generator/utils/: Choice.java  FixedChoice.java  Lim.java  Limitation.java  MSO.java  Member.java  Option.java  ParserGeneratorUtils.java  Stream.java  Struct.java  Type.java  TypeRegistry.java  package-info.java
src/mso/javaparser/: GeneratedMsoParser.java  IncorrectValueException.java  LEDataInputStream.java  LEInputStream.java  LEOutputStream.java  MSOParser.java  ParserTester.java  SerializeReader.java
src/mso/parser/: JavaMsoParserGenerator.java  MSOSchemaValidator.java
tests/data/: Important.odp  Important.ppt  Presentation1.ppt  Presentation2.ppt  Presentation3.ppt  charttest.ppt  important-floating.doc  important-floating.odt  important-inline.doc  important-inline.odt  levels.ppt  lines.ppt  rectangle.ppt  scrolly.odt  sd.ppt  simpleimageslide.ppt  testcotent.doc  testcotent.odt
